--- a/index.ejs
+++ b/index.ejs
@@ -62,13 +62,6 @@
         }
       }
     </style>
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
-        })
-      }
-    </script>
   </head>
   <body>
     <div id="root" class="root">
@@ -78,14 +71,6 @@
         </svg>
       </span>
     </div>
-
-    <% for (let key in htmlWebpackPlugin.options.modernScripts) { %>
-      <script type="module" src="<%= htmlWebpackPlugin.options.modernScripts[key] %>"></script>
-    <% } %>
-
-    <!-- <% for (let key in htmlWebpackPlugin.options.legacyScripts) { %>
-      <script nomodule src="<%= htmlWebpackPlugin.options.legacyScripts[key] %>"></script>
-    <% } %> -->
 
     <% for (let item of htmlWebpackPlugin.options.scripts) { %>
       <script src="<%= item %>"></script>
@@ -103,5 +88,12 @@
         }
       </script>
     <% } %>
+    <script>
+      if ('serviceWorker' in navigator && '${DEPLOY_ENV}' === 'production') {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+        })
+      }
+    </script>
   </body>
 </html>
