Added redirect to /no-support when es-modules are not supported

--- a/index.ejs
+++ b/index.ejs
@@ -64,7 +64,7 @@
     </style>
 
     <script nomodule>
-      document.write('Deze browser wordt niet meer ondersteund. Gebruik een recente versie van bijv. Edge, Chrome of Firefox.')
+      window.location.replace('/no-support')
     </script>
   </head>
 
