Enables serviceworker registration when env vars are available

--- a/index.ejs
+++ b/index.ejs
@@ -92,13 +92,14 @@
           "CMS_ROOT": "${CMS_ROOT}"
         }
       </script>
+
+      <script>
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/sw.js')
+          })
+        }
+      </script>
     <% } %>
-    <script>
-      if ('serviceWorker' in navigator && '${DEPLOY_ENV}' === 'production') {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
-        })
-      }
-    </script>
   </body>
 </html>
