WIP remove svg-loader

--- a/src/map/components/search-results/map-search-results-item/_map-search-results-item.scss
+++ b/src/map/components/search-results/map-search-results-item/_map-search-results-item.scss
@@ -14,6 +14,7 @@
     padding: 4px 8px;
     text-align: left;
     width: 100%;
+    min-height: 34px;
     @media screen and (min-width: $breakpoint-md) {
       padding: 4px 12px;
     }
@@ -46,13 +47,5 @@
     &::after {
       content: '\00a0\00a0';
     }
-  }
-
-  &__arrow {
-    @include icon-sprite('icon-arrow-right', $secondary-gray60, $secondary-gray60, 24px);
-
-    flex-shrink: 0;
-    height: 24px;
-    width: 24px;
   }
 }
