--- a/src/app/components/ContextMenu/Map/Map.scss
+++ b/src/app/components/ContextMenu/Map/Map.scss
@@ -18,9 +18,9 @@
   }
 
   & > div > button {
-    border: 1px solid $secondary-gray20;
-    box-shadow: 2px 2px 0 0 $secondary-gray40;
-    height: 34px;
+    border: none;
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+    height: 40px;
     padding: 0 4px;
     z-index: 10;
 
