--- a/src/map/components/search-results/_map-search-results.scss
+++ b/src/map/components/search-results/_map-search-results.scss
@@ -90,6 +90,8 @@ $icon-height: 24px;
 
   &__footer {
     padding: 24px;
+    display: flex;
+    justify-content: center;
   }
 
   .is-print-mode & {
