--- a/src/map/components/shape-summary/_shape-summary.scss
+++ b/src/map/components/shape-summary/_shape-summary.scss
@@ -6,25 +6,10 @@ $icon-height: 24px;
   display: flex;
   margin-left: 10px;
   padding: 4px;
-
-  &__button {
-    @extend %hover-focus-button;
-    display: block;
-    height: $icon-height;
-    width: $icon-height;
-
-    &--close {
-      @include icon-sprite('icon-cross', $secondary-gray60, $primary-dark, $icon-height + 4px);
-      display: block;
-      height: $icon-height;
-      width: $icon-height;
-
-      &:hover {
-        //sass-lint:disable-line nesting-depth
-        background-size: $icon-height + 4px;
-      }
-    }
-  }
+  position: absolute;
+  left: 160px;
+  z-index: 1;
+  top: 14px;
 
   &__label {
     align-self: center;
