--- a/src/map/containers/panel/_map-panel.scss
+++ b/src/map/containers/panel/_map-panel.scss
@@ -1,7 +1,7 @@
 .map-panel {
-  border: solid 1px $white;
   bottom: $container-whitespace;
-  box-shadow: 2px 2px 0 0 $secondary-gray40;
+  border: none;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   font-weight: $normal-weight;
@@ -79,6 +79,7 @@
 
     .map-panel--collapsed & {
       border: solid 1px $secondary-gray20;
+      height: 40px;
     }
 
     &--icon {
@@ -194,16 +195,15 @@
   .leaflet-control-zoom-out {
     @extend %hover-focus-button;
     background-color: $primary-light;
-    border: 1px solid $secondary-gray20;
-    border-bottom: 1px solid !important;
+    border: none !important;
     border-radius: 0 !important;
-    box-shadow: 2px 2px 0 0 $secondary-gray40;
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
     box-sizing: content-box;
-    color: $secondary-gray60;
-    height: 24px !important;
-    line-height: 22px !important;
-    padding: 4px;
-    width: 24px !important;
+    color: $black;
+    height: 40px !important;
+    line-height: 36px !important;
+    width: 40px !important;
+    //font-size: 32px !important;
   }
 
   .leaflet-control-zoom-in {
