--- a/src/map/containers/preview-panel/_map-preview-panel.scss
+++ b/src/map/containers/preview-panel/_map-preview-panel.scss
@@ -3,8 +3,7 @@ $button-height: 24px;
 
 .map-preview-panel {
   background-color: $secondary-gray5;
-  border: solid 1px $secondary-gray20;
-  box-shadow: 2px 2px 0 0 $secondary-gray40;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
   display: flex;
   flex: 0 0 auto;
   flex-direction: column;
