--- a/index.ejs
+++ b/index.ejs
@@ -82,14 +82,14 @@
     <% } %>
 
     <% if (!htmlWebpackPlugin.options.skipEnvJSON) { %>
-      <script id="environment" type="application/json">
-        {
-          "DEPLOY_ENV": "${DEPLOY_ENV}",
-          "IIIF_ROOT": "${IIIF_ROOT}",
-          "API_ROOT": "${API_ROOT}",
-          "GRAPHQL_ENDPOINT": "${GRAPHQL_ENDPOINT}",
-          "ROOT": "${ROOT}",
-          "CMS_ROOT": "${CMS_ROOT}"
+      <script>
+        window.CONFIG = {
+          DEPLOY_ENV: '${DEPLOY_ENV}',
+          IIIF_ROOT: '${IIIF_ROOT}',
+          API_ROOT: '${API_ROOT}',
+          GRAPHQL_ENDPOINT: '${GRAPHQL_ENDPOINT}',
+          ROOT: '${ROOT}',
+          CMS_ROOT: '${CMS_ROOT}',
         }
       </script>
 
@@ -97,6 +97,16 @@
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', () => {
             navigator.serviceWorker.register('/sw.js')
+          })
+        }
+      </script>
+    <% } else { %>
+      <script>
+        if ('serviceWorker' in navigator) {
+          window.navigator.serviceWorker.getRegistrations().then((registrations) => {
+            for (const registration of registrations) {
+              registration.unregister()
+            }
           })
         }
       </script>
