Drop support for Firefox ESR versions that are no longer maintained

--- a/index.ejs
+++ b/index.ejs
@@ -63,9 +63,7 @@
       }
     </style>
 
-    <script nomodule>
-      window.location.replace('/no-support')
-    </script>
+    <script src="/browser-support-check.js"></script>
   </head>
 
   <body>
