Add environment variables for Keycloak to index

--- a/index.ejs
+++ b/index.ejs
@@ -89,7 +89,10 @@
           "API_ROOT": "${API_ROOT}",
           "GRAPHQL_ENDPOINT": "${GRAPHQL_ENDPOINT}",
           "ROOT": "${ROOT}",
-          "CMS_ROOT": "${CMS_ROOT}"
+          "CMS_ROOT": "${CMS_ROOT}",
+          "KEYCLOAK_URL": "${KEYCLOAK_URL}",
+          "KEYCLOAK_REALM": "${KEYCLOAK_REALM}",
+          "KEYCLOAK_CLIENT": "${KEYCLOAK_CLIENT}"
         }
       </script>
 
