--- a/src/shared/styles/_shared.scss
+++ b/src/shared/styles/_shared.scss
@@ -44,9 +44,9 @@
 @import '../../app/components/Header/EmbedHeader';
 @import '../../app/components/Header/PrintHeader';
 @import '../../app/components/IconButton/IconButton';
-@import '../../app/components/ImageViewer/ImageViewer';
 @import '../../app/components/ViewerControls/ViewerControls';
 @import '../../app/components/DataSelection/DataSelectionTable/DataSelectionTable';
+@import '../../app/pages/ConstructionFilePage/components/ImageViewer/ImageViewer.scss';
 @import '../../panorama/components/PanoramaToggle/PanoramaToggle';
 @import '../../panorama/components/StatusBar/StatusBar';
 @import '../../panorama/components/Hotspot/Hotspot';
