--- a/src/shared/styles/_shared.scss
+++ b/src/shared/styles/_shared.scss
@@ -46,7 +46,7 @@
 @import '../../app/components/IconButton/IconButton';
 @import '../../app/components/ViewerControls/ViewerControls';
 @import '../../app/components/DataSelection/DataSelectionTable/DataSelectionTable';
-@import '../../app/pages/ConstructionFilePage/components/ImageViewer/ImageViewer.scss';
+@import '../../app/pages/ConstructionFilePage/components/ImageViewer/ImageViewer';
 @import '../../panorama/components/PanoramaToggle/PanoramaToggle';
 @import '../../panorama/components/StatusBar/StatusBar';
 @import '../../panorama/components/Hotspot/Hotspot';
