Added print styles for beta map + added context menu

--- a/modules/shared/legacy/_dashboard.scss
+++ b/modules/shared/legacy/_dashboard.scss
@@ -6,6 +6,10 @@ $backdrop-color: rgba(0, 0, 0, 0.5);
   height: 100%;
   background: $primary-light;
 
+  @media print {
+    height: initial;
+  }
+
   .styled-header {
     width: 100%;
     display: flex;
