--- a/modules/shared/legacy/data-selection/_pagination.scss
+++ b/modules/shared/legacy/data-selection/_pagination.scss
@@ -1,4 +1,5 @@
 .c-data-selection-pagination {
+  height: 100px;
   margin: 0 (-2 * $base-whitespace);
   padding: 2 * $base-whitespace;
   padding-bottom: 0;
