--- a/src/shared/legacy-styles/components/data-selection/_available-filters.scss
+++ b/src/shared/legacy-styles/components/data-selection/_available-filters.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $data-selection-available-filters-gutter: 2 * $base-whitespace;
 $data-selection-available-filters-item-height: 32px;
 
@@ -56,6 +58,6 @@ $data-selection-available-filters-item-height: 32px;
 }
 
 .c-data-selection-available-filters__hidden-options {
-  margin-bottom: $base-whitespace / 2;
+  margin-bottom: math.div($base-whitespace, 2);
   color: $secondary-gray40;
 }
