--- a/src/shared/legacy-styles/components/DataSelectionTable.scss
+++ b/src/shared/legacy-styles/components/DataSelectionTable.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .c-ds-table {
   $self: &;
   display: inline-table;
@@ -54,10 +56,8 @@
     color: $primary-dark;
     display: table-cell;
     font-weight: $medium-weight;
-    padding-bottom: $base-whitespace / 2;
-    padding-left: $base-whitespace;
-    padding-right: $base-whitespace * 2;
-    padding-top: $base-whitespace / 2;
+    padding: math.div($base-whitespace, 2) $base-whitespace * 2 math.div($base-whitespace, 2)
+      $base-whitespace;
     white-space: nowrap;
   }
 }
