--- a/src/shared/legacy-styles/components/_tag.scss
+++ b/src/shared/legacy-styles/components/_tag.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .o-tag {
   background: $secondary-gray30;
   border-radius: 3px 0 0 3px;
@@ -5,7 +7,7 @@
   display: inline-block;
   height: 26px;
   line-height: 26px;
-  margin: $base-whitespace / 2 0 $base-whitespace / 2;
+  margin: math.div($base-whitespace, 2) 0 math.div($base-whitespace, 2);
   padding: 0 20px 0 23px;
   position: relative;
   text-decoration: none;
