Rename the application to Dataverkenner

--- a/src/shared/legacy-styles/components/dcatd/_datasets.scss
+++ b/src/shared/legacy-styles/components/dcatd/_datasets.scss
@@ -1,4 +1,4 @@
-// resources, resources-item and the styles/** are copyied form dcatd_admin and should be integrated in atlas
+// resources, resources-item and the styles/** are copyied form dcatd_admin and should be integrated in data-verkenner
 @use "sass:math";
 @import 'resources';
 @import 'resources-item';
