--- a/index.ejs
+++ b/index.ejs
@@ -9,7 +9,7 @@
 
     <meta name="og:title" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta name="og:type" content="website" />
-    <meta name="og:image" content="<%= htmlWebpackPlugin.options.root %>data-en-informatie-600-600.jpg" />
+    <meta name="og:image" content="<%= htmlWebpackPlugin.options.root %>data-verkenner-600-600.jpg" />
     <meta name="og:url" content="<%= htmlWebpackPlugin.options.root %>" />
     <meta name="og:description" content="<%= htmlWebpackPlugin.options.description %>" />
     <meta property="og:image:width" content="600" />
@@ -17,8 +17,8 @@
 
     <meta name="twitter:title" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta name="twitter:description" content="<%= htmlWebpackPlugin.options.description %>" />
-    <meta name="twitter:card" content="<%= htmlWebpackPlugin.options.root %>data-en-informatie-600-314.jpg" />
-    <meta name="twitter:image" content="<%= htmlWebpackPlugin.options.root %>data-en-informatie-600-314.jpg" />
+    <meta name="twitter:card" content="<%= htmlWebpackPlugin.options.root %>data-verkenner-600-314.jpg" />
+    <meta name="twitter:image" content="<%= htmlWebpackPlugin.options.root %>data-verkenner-600-314.jpg" />
     <meta name="twitter:site" content="@AmsterdamNL" />
     <meta name="twitter:creator" content="@AmsterdamNL" />
 
