--- a/index.ejs
+++ b/index.ejs
@@ -97,9 +97,12 @@
 
       <script>
         if ('serviceWorker' in navigator) {
-          window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/sw.js')
-          })
+          navigator.serviceWorker.getRegistrations()
+           .then(function(registrations) {
+             for(let registration of registrations) {
+               registration.unregister();
+             }
+           });
         }
       </script>
     <% } %>
